@@ -1,5 +1,10 @@
 Thu Apr 25 06:51:58 2002  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>
 
+	* ace/OS.h (ACE_FACTORY_DEFINE): Replaced an ACE_reinterpret_cast() with 
+	  an ACE_static_cast() since the latter works correctly with
+ 	  multiple inheritance.  Thanks to Chris Uzdavinis
+ 	  <chris@atdesk.com> for reporting this.
+
 	* ace/CDR_Base.h (ACE_CDR): Improved the documentation of the consolidate()
 	  method.  Thanks to Alain Decamps for helping with this.
 
